--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
-xgboost==1.7.6
-lightgbm==4.0.0
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.15.0
-shap==0.42.1
-optuna==3.3.0
-pyyaml==6.0
-loguru==0.7.0
-pytest==7.4.0
-jupyter==1.0.0
-ipykernel==6.25.0
+numpy>=1.26.0
+pandas>=2.1.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+lightgbm>=4.1.0
+matplotlib>=3.8.0
+seaborn>=0.13.0
+plotly>=5.17.0
+shap>=0.43.0
+optuna>=3.4.0
+pyyaml>=6.0.1
+loguru>=0.7.2
+pytest>=7.4.3
+jupyter>=1.0.0
+ipykernel>=6.26.0
+scipy>=1.11.0
