--- a/config/model_params.yaml
+++ b/config/model_params.yaml
@@ -12,9 +12,9 @@ lasso:
 
 random_forest:
   n_estimators: [100, 200, 300]
-  max_depth: [10, 20, 30, null]
-  min_samples_split: [2, 5, 10]
-  min_samples_leaf: [1, 2, 4]
+  max_depth: [10, 15, 20]
+  min_samples_split: [10, 20, 30]
+  min_samples_leaf: [4, 8, 12]
 
 xgboost:
   n_estimators: [100, 200, 300]
